--- a/src/index.css
+++ b/src/index.css
@@ -30,4 +30,28 @@ select {
   color: black;
   border: 1px solid black;
 }
-
+.list__filter {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.tag {
+  background-color: #f4f4f4;
+  border: 1px solid #e9e9e9;
+  padding: 2px 0 2px 2px;
+  border-radius: 2px;
+  display: inline-block;
+  padding: 12px !important;
+  display: flex !important ;
+  gap: 10px !important;
+}
+.search {
+  padding: 10px;
+}
+.select__list {
+  max-width: 1440px;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
