--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ select {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
+  flex-direction: column;
 }
 .tag {
   background-color: #f4f4f4;
