remove the items when clkc into delte

--- a/src/pages/Warranty/Products/Product/style/product.css
+++ b/src/pages/Warranty/Products/Product/style/product.css
@@ -9,6 +9,7 @@ img {
   padding: 13px;
   border: 2.3px solid #d6d6d6;
   border-radius: 13px;
+  transition: 0.5s;
 }
 .product__image {
   height: 100%;
