--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 ::before {
   margin: 0;
   padding: 0;
+  --primary-color: #4f46e5;
 }
 
 body {
@@ -32,10 +33,19 @@ select {
 }
 .list__filter {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1440px;
+  margin: auto;
 }
+
+.total__product {
+  font-size: 18px;
+  position: relative;
+  right: 0;
+  align-content: flex-end;
+}
+
 .tag {
   background-color: #f4f4f4;
   border: 1px solid #e9e9e9;
@@ -222,4 +232,113 @@ select {
 }
 .price {
   font-weight: bold;
+}
+
+legend,
+.bx {
+  font-size: 1.3rem;
+  font-weight: 700px;
+}
+
+.container {
+  display: flex;
+  gap: 0.4rem;
+}
+
+.logo__level1 {
+  object-fit: contain !important;
+  height: 50px !important;
+  width: 50px !important;
+}
+/* Hide default radio style */
+.checkbox-input {
+  opacity: 0;
+  visibility: hidden;
+  margin: 0;
+}
+
+/* Change icon, border and text color when radio is checked */
+.checkbox-input:checked + .checkbox-tile,
+.checkbox-input:checked + .checkbox-tile span {
+  border-color: var(--primary-color);
+  color: var(--primary-color);
+  width: 120px;
+  background-color: #f4f0f0;
+}
+
+/* Checkbox display */
+.checkbox-input:checked + .checkbox-tile::before {
+  transform: scale(1);
+  opacity: 1;
+  background-color: var(--primary-color);
+  background-color: var(--primary-color);
+}
+
+/* Checkbox icon and text */
+.checkbox-tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2rem;
+  width: 100px;
+  height: 70px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  transition: 0.1s ease;
+  cursor: pointer;
+  position: relative;
+}
+
+.checkbox-tile:hover {
+  border-color: #999;
+}
+
+/* Checkmark (icon inside checker) */
+.checkbox-tile::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 0.25rem;
+  left: 0.25rem;
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.25s ease;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192' fill='%23FFFFFF' viewBox='0 0 256 256'%3E%3Crect width='256' height='256' fill='none'%3E%3C/rect%3E%3Cpolyline points='216 72.005 104 184 48 128.005' fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-width='32'%3E%3C/polyline%3E%3C/svg%3E");
+  border: 2px solid var(--primary-color);
+  background-size: 12px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+/* Not important */
+a {
+  color: var(--primary-color);
+}
+
+p {
+  margin: 1rem 0;
+}
+
+.search {
+  width: 100px !important;
+}
+
+.search__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.search__withfilters {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.MuiGrid-grid-md-3 {
+  width: max-content !important;
 }
