--- a/src/index.css
+++ b/src/index.css
@@ -341,3 +341,22 @@ p {
 .MuiGrid-grid-md-3 {
   width: max-content !important;
 }
+.add__items {
+  background-color: #4f46e5 !important;
+  color: white !important;
+  padding: 10px 50px;
+  border: 0;
+  border-radius: 5px;
+}
+.tree input[type="checkbox"]:checked + label::before {
+  background-color: #007bff;
+  content: "\f00c";
+  font-family: "FontAwesome";
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  color: #fff;
+}
+.tree ul ul {
+  display: none;
+}
