--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @tailwind base;
+
 @tailwind components;
 @tailwind utilities;
 
+/* @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";*/
 *::after,
 ::before {
   margin: 0;
@@ -60,8 +62,7 @@ select {
   padding: 10px;
 }
 .select__list {
-  max-width: 1440px;
-  margin: auto;
+  
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -441,4 +442,22 @@ p {
 .next__pag > img {
   width: 15px;
   height: 20px;
+}
+
+
+.app__container { 
+  max-width: 1440px ;
+  margin-inline : auto;
+}
+
+
+.search__ { 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.total__product { 
+  font-weight: bold;
+  font-size: 20px;
 }
