--- a/src/index.css
+++ b/src/index.css
@@ -84,24 +84,28 @@ select {
   height: 80%;
   width: 30%;
   position: fixed;
-  top: 0;
-  left: 0;
-  transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: #ffffff;
   box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.12);
   border-radius: 16px;
   padding: 20px;
   z-index: 100;
+  position: relative;
 }
 @media screen and (max-width: 1440px) {
   .sidebar {
     width: calc(100% - 50%);
+    height: 70%;
   }
 }
 
 @media screen and (max-width: 1000px) {
   .sidebar {
     width: calc(100% - 10%);
+    height: 70%;
   }
 }
 
@@ -128,7 +132,7 @@ select {
   cursor: pointer;
   scroll-behavior: smooth;
   overflow-y: scroll;
-  height: 90%;
+  height: 70%;
   overflow-x: hidden;
 }
 ::-webkit-scrollbar {
@@ -142,11 +146,18 @@ select {
 
 .sidebar__buttons {
   display: flex;
-  justify-content: center;
-  place-content: center;
-  place-items: center;
   width: 100%;
+  justify-content: center;
   padding-bottom: 20px;
+  position: fixed;
+  bottom: 20px;
+  padding: 20px;
+  right: 0;
+  background-color: #ffffff;
+}
+
+.list__modal {
+  height: 100%;
 }
 .next {
   cursor: pointer;
@@ -157,7 +168,7 @@ select {
   font-weight: bold;
   border-radius: 10px;
   width: max-content;
-  padding: 10px 18%;
+  padding: 10px 14%;
 }
 
 .next:hover {
@@ -176,7 +187,7 @@ select {
   display: grid;
   place-items: center;
   font-weight: bold;
-  padding: 10px 18%;
+  padding: 10px 14%;
   border-radius: 10px;
   transition: 0.5s;
 }
